Bug #6031 To drop database you have to execute DROP DATABASE command twice.
Submitted: 11 Oct 2004 16:33 Modified: 10 Nov 2004 16:14
Reporter: Victoria Reznichenko
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1.6-gamma-debug-log OS:
Assigned to: Bugs System Target Version:

[11 Oct 2004 16:33] Victoria Reznichenko
Description:
If database has NDB tables it can be dropped only executing DROP DATABASE statement
twice.

mysql> create database test1;
Query OK, 1 row affected (0.12 sec)

mysql> use test1;
Database changed
mysql> create table t1(id int)type=ndb;
Query OK, 0 rows affected, 1 warning (0.69 sec)

mysql> drop database test1;
ERROR 1010 (HY000): Error dropping database (can't rmdir './test1/', errno: 17)
mysql> drop database test1;
Query OK, 0 rows affected (0.04 sec)

How to repeat:
create database test1;
use test1;
create table t1(id int)type=ndb;
drop database test1;
drop database test1;
[4 Nov 2004 15:42] Martin Skold
When do you expect to push this?
Are you waiting for a review?
We really need this in 4.1.8.

Thanks!
-- Martin
[5 Nov 2004 13:46] Antony Curtis
A review of the patch was done by bar... awaiting 2nd review of patch before 
push.
[10 Nov 2004 15:52] Antony Curtis
2nd review completed by ingo
[10 Nov 2004 16:14] Antony Curtis
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html