Bug#6031 - To drop database you have to execute DROP DATABASE command twice.   DROP DATABASE failed because of file ext not in TYPELIB of known extensions.   General solution - construct a TYPELIB at runtime instead of a static list.